# polyscoop

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  justfile
.github/workflows/: auto-tag.yml  check-formatting.yml  codeql.yml  deploy.yml  unit-tests.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 092c9ceebb96_add_users_table.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: builder.py  copytrade.py  health.py  live.py  markets.py  positions.py  prices.py  signing.py  signup.py  trades.py  wallets.py
backend/app/core/: config.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/db/: engine.py  models.py
backend/app/schemas/: polymarket.py
backend/app/services/: copytrade.py  leaderboard.py  polymarket.py  scoring.py
backend/app/workers/: manager.py  market_discovery.py  trade_listener.py  trade_poller.py  wallet_scorer.py
backend/tests/: test_health.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite-env.d.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Footer.tsx  Header.tsx  MarketCard.tsx  MarketGrid.tsx  SessionPanel.tsx  WalletInfo.tsx
frontend/src/config/: constants.ts  wagmi.ts
frontend/src/constants/: polymarket.ts  tokens.ts
frontend/src/hooks/: useBuilderTrades.ts  useCancelOrder.ts  useCashBalance.ts  useClobClient.ts  useCopyTrade.ts  useCreateOrder.ts  useLeaderboard.ts  useLiveTrades.ts  useMarketData.ts  useMarkets.ts  useOpenOrders.ts  (+14 more)
scripts/: setup-local-dev.sh
(+28 files in other folders)
